<resources>
    <string name="app_name">FindFind.it</string>
    <string name="action_settings">Settings</string>
    <string name="submitButton">Go</string>
    <string name="comma">,</string>
    <string name="clear">clear</string>
    <string name="hintSearchInput"></string>
    <string name="pref_version_title">User name</string>
    <string name="pref_version_summary">0.1</string>
    <string name="pref_user_name_title">User name</string>
    <string name="pref_user_name_summary">Leave blank if you have no user account</string>
    <string name="pref_user_name_default_value"></string>
    <string name="pref_custom_namespaces_title">Custom namespaces</string>
    <string name="pref_custom_namespaces_summary">Optional. Add additional namespaces, separated by &quot;.&quot;</string>
    <string name="pref_default_keyword_title">Default keyword</string>
    <string name="pref_default_keyword_default_value">g</string>
    <string name="pref_default_keyword_summary">Optional. A default keyword will be used if your query could not be matched with a shortcut. Defaults to Google.</string>
    <string name="pref_language_namespace_title">Language namespace</string>
    <string-array name="pref_language_namespace_values">
        <item>ab</item>
        <item>aa</item>
        <item>af</item>
        <item>ak</item>
        <item>sq</item>
        <item>am</item>
        <item>ar</item>
        <item>hy</item>
        <item>as</item>
        <item>av</item>
        <item>ae</item>
        <item>ay</item>
        <item>az</item>
        <item>bm</item>
        <item>ba</item>
        <item>eu</item>
        <item>be</item>
        <item>bn</item>
        <item>dz</item>
        <item>bh</item>
        <item>bi</item>
        <item>bs</item>
        <item>br</item>
        <item>bg</item>
        <item>my</item>
        <item>km</item>
        <item>ca</item>
        <item>ch</item>
        <item>ce</item>
        <item>ny</item>
        <item>cv</item>
        <item>kw</item>
        <item>co</item>
        <item>cr</item>
        <item>hr</item>
        <item>cs</item>
        <item>da</item>
        <item>nl</item>
        <item>en</item>
        <item>eo</item>
        <item>et</item>
        <item>ee</item>
        <item>fo</item>
        <item>fj</item>
        <item>fi</item>
        <item>fr</item>
        <item>fy</item>
        <item>ff</item>
        <item>gl</item>
        <item>ka</item>
        <item>de</item>
        <item>el</item>
        <item>kl</item>
        <item>gn</item>
        <item>gu</item>
        <item>ht</item>
        <item>ha</item>
        <item>he</item>
        <item>hz</item>
        <item>hi</item>
        <item>ho</item>
        <item>hu</item>
        <item>is</item>
        <item>ig</item>
        <item>id</item>
        <item>ia</item>
        <item>ie</item>
        <item>iu</item>
        <item>ik</item>
        <item>ga</item>
        <item>it</item>
        <item>ja</item>
        <item>jv</item>
        <item>kn</item>
        <item>kr</item>
        <item>ks</item>
        <item>kk</item>
        <item>ki</item>
        <item>rw</item>
        <item>rn</item>
        <item>kv</item>
        <item>kg</item>
        <item>ko</item>
        <item>ku</item>
        <item>kj</item>
        <item>ky</item>
        <item>lo</item>
        <item>la</item>
        <item>lv</item>
        <item>ln</item>
        <item>lt</item>
        <item>lg</item>
        <item>lb</item>
        <item>mk</item>
        <item>mg</item>
        <item>ms</item>
        <item>ml</item>
        <item>dv</item>
        <item>mt</item>
        <item>gv</item>
        <item>mr</item>
        <item>mh</item>
        <item>mo</item>
        <item>mn</item>
        <item>mi</item>
        <item>na</item>
        <item>nv</item>
        <item>ng</item>
        <item>ne</item>
        <item>nd</item>
        <item>se</item>
        <item>nb</item>
        <item>nn</item>
        <item>oc</item>
        <item>cu</item>
        <item>or</item>
        <item>om</item>
        <item>os</item>
        <item>pi</item>
        <item>ps</item>
        <item>fa</item>
        <item>pl</item>
        <item>pt</item>
        <item>pa</item>
        <item>qu</item>
        <item>rm</item>
        <item>ro</item>
        <item>ru</item>
        <item>sm</item>
        <item>sg</item>
        <item>sa</item>
        <item>sc</item>
        <item>gd</item>
        <item>sr</item>
        <item>sh</item>
        <item>st</item>
        <item>tn</item>
        <item>sn</item>
        <item>sd</item>
        <item>si</item>
        <item>ss</item>
        <item>sk</item>
        <item>sl</item>
        <item>so</item>
        <item>nr</item>
        <item>es</item>
        <item>su</item>
        <item>sw</item>
        <item>sv</item>
        <item>tl</item>
        <item>ty</item>
        <item>tg</item>
        <item>ta</item>
        <item>tt</item>
        <item>te</item>
        <item>th</item>
        <item>bo</item>
        <item>ti</item>
        <item>to</item>
        <item>ts</item>
        <item>tr</item>
        <item>tk</item>
        <item>tw</item>
        <item>ug</item>
        <item>uk</item>
        <item>ur</item>
        <item>uz</item>
        <item>ve</item>
        <item>vi</item>
        <item>cy</item>
        <item>wo</item>
        <item>xh</item>
        <item>yi</item>
        <item>yo</item>
        <item>za</item>
        <item>zu</item>
    </string-array>
    <string-array name="pref_language_namespace_entries">
        <item>Abkhazian</item>
        <item>Afar</item>
        <item>Afrikaans</item>
        <item>Akan</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Assamese</item>
        <item>Avar</item>
        <item>Avestan</item>
        <item>Aymara</item>
        <item>Azerbaijani</item>
        <item>Bambara</item>
        <item>Bashkir</item>
        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Bhutani</item>
        <item>Bihari</item>
        <item>Bislama</item>
        <item>Bosnian</item>
        <item>Breton</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Cambodian</item>
        <item>Catalan</item>
        <item>Chamorro</item>
        <item>Chechen</item>
        <item>Chichewa</item>
        <item>Chuvash</item>
        <item>Cornish</item>
        <item>Corsican</item>
        <item>Cree</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Ewe</item>
        <item>Faeroese</item>
        <item>Fiji</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Frisian</item>
        <item>Fulah</item>
        <item>Galician</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Greek</item>
        <item>Greenlandic</item>
        <item>Guarani</item>
        <item>Gujarati</item>
        <item>Haitian Creole</item>
        <item>Hausa</item>
        <item>Hebrew</item>
        <item>Herero</item>
        <item>Hindi</item>
        <item>Hiri Motu</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Igbo</item>
        <item>Indonesian</item>
        <item>Interlingua</item>
        <item>Interlingue</item>
        <item>Inuktitut</item>
        <item>Inupiak</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Javanese</item>
        <item>Kannada</item>
        <item>Kanuri</item>
        <item>Kashmiri</item>
        <item>Kazakh</item>
        <item>Kikuyu</item>
        <item>Kinyarwanda</item>
        <item>Kirundi</item>
        <item>Komi</item>
        <item>Kongo</item>
        <item>Korean</item>
        <item>Kurdish</item>
        <item>Kwanyama</item>
        <item>Kyrgyz</item>
        <item>Laothian</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lingala</item>
        <item>Lithuanian</item>
        <item>Luganda</item>
        <item>Luxembourgish</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maldivian</item>
        <item>Maltese</item>
        <item>Manx</item>
        <item>Marathi</item>
        <item>Marshallese</item>
        <item>Moldavian</item>
        <item>Mongolian</item>
        <item>Māori</item>
        <item>Nauru</item>
        <item>Navajo</item>
        <item>Ndonga</item>
        <item>Nepali</item>
        <item>North Ndebele</item>
        <item>Northern Sami</item>
        <item>Norwegian Bokmål</item>
        <item>Norwegian Nynorsk</item>
        <item>Occitan</item>
        <item>Old Slavonic</item>
        <item>Oriya</item>
        <item>Oromo</item>
        <item>Ossetian</item>
        <item>Pali</item>
        <item>Pashto</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Punjabi</item>
        <item>Quechua</item>
        <item>Rhaeto-Romance</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Samoan</item>
        <item>Sango</item>
        <item>Sanskrit</item>
        <item>Sardinian</item>
        <item>Scots Gaelic</item>
        <item>Serbian</item>
        <item>Serbo-Croatian</item>
        <item>Sesotho</item>
        <item>Setswana</item>
        <item>Shona</item>
        <item>Sindhi</item>
        <item>Sinhala</item>
        <item>Siswati</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Somali</item>
        <item>South Ndebele</item>
        <item>Spanish</item>
        <item>Sudanese</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Tahitian</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tibetan</item>
        <item>Tigrinya</item>
        <item>Tonga</item>
        <item>Tsonga</item>
        <item>Turkish</item>
        <item>Turkmen</item>
        <item>Twi</item>
        <item>Uighur</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Venda</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Wolof</item>
        <item>Xhosa</item>
        <item>Yiddish</item>
        <item>Yoruba</item>
        <item>Zhuang</item>
        <item>Zulu</item>
    </string-array>
    <string name="pref_country_namespace_title">Country namespace</string>
</resources>